# dimensional

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  DKVec.hs  LICENSE  ListVec.hs  README  README.md  Test.hs  VecImp.hs  dimensional-dk.cabal  dimensional-tf.cabal  dimensional.cabal  stack.ghc8.yaml  stack.ghc84.yaml  stack.lts10.yaml  stack.lts2.yaml  stack.lts3.yaml  stack.lts5.yaml  stack.lts7.yaml  stack.lts9.yaml  stack.yaml
.github/workflows/: ci.yaml
Numeric/NumType/: DK.hs
Numeric/Units/Dimensional/: DK.hs  DK.lhs  TF.lhs
Numeric/Units/Dimensional/DK/: Dimensions.hs  Functor.hs  NonSI.hs  NonSI.lhs  Prelude.hs  Quantities.hs  Quantities.lhs  QuantitiesTest.hs  SIUnits.hs  SIUnits.lhs  Test.hs  UnitNames.hs  Variants.hs
Numeric/Units/Dimensional/DK/Dimensions/: TermLevel.hs  TypeLevel.hs
Numeric/Units/Dimensional/DK/UnitNames/: InterchangeNames.hs  Internal.hs
Numeric/Units/Dimensional/TF/: NonSI.lhs  Prelude.hs  Quantities.lhs  QuantitiesTest.hs  SIUnits.lhs  Test.hs
benchmarks/: Main.hs
docs/: manual.tex
examples/: GM.lhs  NewtonianMechanics.hs  README  ReadmeExample.hs
src/Numeric/Units/: Dimensional.hs
src/Numeric/Units/Dimensional/: Coercion.hs  DK.hs  Dimensions.hs  Dynamic.hs  FixedPoint.hs  Float.hs  Functor.hs  Internal.hs  NonSI.hs  Prelude.hs  Quantities.hs  SIUnits.hs  UnitNames.hs  Variants.hs
src/Numeric/Units/Dimensional/DK/: Dynamic.hs  Functor.hs  NonSI.hs  Prelude.hs  Quantities.hs  SI.hs  SIUnits.hs  UnitNames.hs  Variants.hs
src/Numeric/Units/Dimensional/DK/Dimensions/: TermLevel.hs  TypeLevel.hs
src/Numeric/Units/Dimensional/DK/SI/: Prelude.hs  Quantities.hs  SIUnits.hs
src/Numeric/Units/Dimensional/DK/UnitNames/: InterchangeNames.hs  Internal.hs
src/Numeric/Units/Dimensional/Dimensions/: TermLevel.hs  TypeLevel.hs
src/Numeric/Units/Dimensional/UnitNames/: InterchangeNames.hs  Internal.hs
tests/: DocTests.hs  Spec.hs  Test.hs
tests/Numeric/Units/: DimensionalSpec.hs
tests/Numeric/Units/Dimensional/: DynamicSpec.hs  QuantitiesSpec.hs  QuantitiesTest.hs  SIUnitsSpec.hs  Test.hs
tests/Numeric/Units/Dimensional/DK/: QuantitiesTest.hs  Test.hs
