Name:                dimensional-dk
Version:             0.8.0.1
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2006-2015
Author:              Bjorn Buckwalter
Maintainer:          bjorn@buckwalter.se
Stability:           experimental
Homepage:            http://dimensional.googlecode.com/
Synopsis:            Statically checked physical dimensions, implemented
                     using Type Families and Data Kinds.

Description:

    Dimensional is a library providing data types for performing arithmetic
    with physical quantities and units. Information about the physical
    dimensions of the quantities and units is embedded in their types and the
    validity of operations is verified by the type checker at compile time.
    The boxing and unboxing of numerical values as quantities is done by
    multiplication and division with units. The library is designed to, as
    far as is practical, enforce/encourage best practices of unit usage.

    The dimensional-dk package differs from the dimensional package in that
    the dimension tracking is implemented using Type Families and Data Kinds
    rather than functional dependencies.

    Requires GHC 7.8 or later.

Category:            Math, Physics
Build-Type:          Simple
Build-Depends:       base < 5,
                     numtype-dk >= 0.5 && < 1.1
Exposed-Modules:     Numeric.Units.Dimensional.DK,
                     Numeric.Units.Dimensional.DK.Prelude,
                     Numeric.Units.Dimensional.DK.Quantities,
                     Numeric.Units.Dimensional.DK.SIUnits,
                     Numeric.Units.Dimensional.DK.NonSI,
                     Numeric.Units.Dimensional.DK.Dimensions,
                     Numeric.Units.Dimensional.DK.Dimensions.TermLevel,
                     Numeric.Units.Dimensional.DK.Dimensions.TypeLevel
Extra-source-files:  README.md,
                     Test.hs,
                     Numeric/Units/Dimensional/DK/Test.hs,
                     Numeric/Units/Dimensional/DK/QuantitiesTest.hs,
                     examples/README,
                     examples/GM.lhs
