name:                dimensional-dk
version:             0.8.0.2
license:             BSD3
license-file:        LICENSE
copyright:           Bjorn Buckwalter 2006-2015
author:              Bjorn Buckwalter
maintainer:          bjorn@buckwalter.se
stability:           experimental
homepage:            http://dimensional.googlecode.com/
category:            Math, Physics
synopsis:            Statically checked physical dimensions,
                     using Type Families and Data Kinds.
cabal-version:       >= 1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2
build-type:          Simple

description:

    Dimensional is a library providing data types for performing arithmetic
    with physical quantities and units. Information about the physical
    dimensions of the quantities and units is embedded in their types and the
    validity of operations is verified by the type checker at compile time.
    The boxing and unboxing of numerical values as quantities is done by
    multiplication and division with units. The library is designed to, as
    far as is practical, enforce/encourage best practices of unit usage.

    The dimensional-dk package differs from the dimensional package in that
    the dimension tracking is implemented using Type Families and Data Kinds
    rather than functional dependencies.

    Requires GHC 7.8 or later.

extra-source-files:  README.md,
                     examples/README,
                     examples/GM.lhs

source-repository head
  type:     git
  location: https://github.com/bjornbm/dimensional-dk/

library
  build-depends:       base >= 4.7 && < 5,
                       deepseq >= 1.3,
                       exact-pi >= 0.2.1.1 && < 0.3,
                       numtype-dk >= 0.5 && < 1.1,
                       vector >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Numeric.Units.Dimensional.DK,
                       Numeric.Units.Dimensional.DK.Prelude,
                       Numeric.Units.Dimensional.DK.Quantities,
                       Numeric.Units.Dimensional.DK.SIUnits,
                       Numeric.Units.Dimensional.DK.NonSI,
                       Numeric.Units.Dimensional.DK.Dimensions,
                       Numeric.Units.Dimensional.DK.Dimensions.TermLevel,
                       Numeric.Units.Dimensional.DK.Dimensions.TypeLevel,
                       Numeric.Units.Dimensional.DK.Dynamic,
                       Numeric.Units.Dimensional.DK.Functor,
                       Numeric.Units.Dimensional.DK.UnitNames,
                       Numeric.Units.Dimensional.DK.UnitNames.InterchangeNames,
                       Numeric.Units.Dimensional.DK.Variants
  other-modules:       Numeric.Units.Dimensional.DK.UnitNames.Internal

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      tests
  other-modules:       Numeric.Units.Dimensional.DK.QuantitiesTest,
                       Numeric.Units.Dimensional.DK.Test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       dimensional-dk,
                       HUnit,
                       base

benchmark simple
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Main.hs
  build-depends:       base,
                       criterion,
                       deepseq,
                       dimensional-dk
  default-language:    Haskell2010
  ghc-options:         -O2
  
