Name:                dimensional-tf
Version:             0.1
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2006-2012
Author:              Bjorn Buckwalter
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           experimental
Homepage:            http://dimensional.googlecode.com/
Synopsis:            Statically checked physical dimensions, implemented
                     using type families.

Description:

    Dimensional is a library providing data types for performing arithmetic
    with physical quantities and units. Information about the physical
    dimensions of the quantities and units is embedded in their types and the
    validity of operations is verified by the type checker at compile time.
    The boxing and unboxing of numerical values as quantities is done by
    multiplication and division with units. The library is designed to, as
    far as is practical, enforce/encourage best practices of unit usage.

    The dimensional-tf packade differs from the dimensional package in that
    the dimension tracking is implemented using type families rather than
    functional dependencies.

    Requires GHC 7.0 or later.

Category:            Math, Physics
Build-Type:          Simple
Build-Depends:       base < 5, time < 1.5, numtype-tf < 1.1
Exposed-Modules:     Numeric.Units.Dimensional.TF,
                     Numeric.Units.Dimensional.TF.Prelude,
                     Numeric.Units.Dimensional.TF.Quantities,
                     Numeric.Units.Dimensional.TF.SIUnits,
                     Numeric.Units.Dimensional.TF.NonSI
Extra-source-files:  README,
                     Test.hs
                     Numeric/Units/Dimensional/TF/Test.hs,
                     Numeric/Units/Dimensional/TF/QuantitiesTest.hs,
                     examples/README,
                     examples/GM.lhs
