name:                dimensional
version:             1.0.1.3
license:             BSD3
license-file:        LICENSE
copyright:           Bjorn Buckwalter 2006-2015
author:              Bjorn Buckwalter
maintainer:          bjorn@buckwalter.se
stability:           experimental
homepage:            https://github.com/bjornbm/dimensional/
category:            Math, Physics
synopsis:            Statically checked physical dimensions,
                     using Type Families and Data Kinds.
cabal-version:       >= 1.10
tested-with:         GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2
build-type:          Simple

description:

    Dimensional is a library providing data types for performing arithmetic
    with physical quantities and units. Information about the physical
    dimensions of the quantities and units is embedded in their types and the
    validity of operations is verified by the type checker at compile time.
    The boxing and unboxing of numerical values as quantities is done by
    multiplication and division with units. The library is designed to, as
    far as is practical, enforce/encourage best practices of unit usage.

    Version 1 of the dimensional package differs from earlier version in that
    the dimension tracking is implemented using Closed Type Families and Data Kinds
    rather than functional dependencies. This enables a number of features, including
    improved support for unit names and quantities with statically-unknown dimensions.

    Requires GHC 7.8 or later.

extra-source-files:  README.md,
                     CHANGELOG.md,
                     examples/ReadmeExample.hs,
                     examples/GM.lhs

source-repository head
  type:     git
  location: https://github.com/bjornbm/dimensional/

library
  build-depends:       base >= 4.7 && < 5,
                       deepseq >= 1.3,
                       exact-pi >= 0.2.1.1 && < 0.5,
                       numtype-dk >= 0.5 && < 1.1,
                       vector >= 0.10
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Numeric.Units.Dimensional,
                       Numeric.Units.Dimensional.Coercion,
                       Numeric.Units.Dimensional.Prelude,
                       Numeric.Units.Dimensional.Quantities,
                       Numeric.Units.Dimensional.SIUnits,
                       Numeric.Units.Dimensional.NonSI,
                       Numeric.Units.Dimensional.Dimensions,
                       Numeric.Units.Dimensional.Dimensions.TermLevel,
                       Numeric.Units.Dimensional.Dimensions.TypeLevel,
                       Numeric.Units.Dimensional.Dynamic,
                       Numeric.Units.Dimensional.Functor,
                       Numeric.Units.Dimensional.UnitNames,
                       Numeric.Units.Dimensional.UnitNames.InterchangeNames,
                       Numeric.Units.Dimensional.Variants
  other-modules:       Numeric.Units.Dimensional.Internal,
                       Numeric.Units.Dimensional.UnitNames.Internal

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Test.hs
  hs-source-dirs:      tests
  other-modules:       Numeric.Units.Dimensional.QuantitiesTest,
                       Numeric.Units.Dimensional.Test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       dimensional,
                       HUnit,
                       base

benchmark simple
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmarks
  main-is:             Main.hs
  build-depends:       base,
                       criterion,
                       deepseq,
                       dimensional
  default-language:    Haskell2010
  ghc-options:         -O2
  
